@@ -1,11 +1,11 @@
 # $Id$
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
-JUMIPLUGINDESC=<p>Tento obsahový plugin (content plugin) vkládá do Joomla! článků uživateslký skript: ze souboru nebo z databázového záznamu Jumi komponenty.</p><p><b>Užití: {jumi [uložený_kód] [arg1] [arg2] ... [argN]}</b><br />kde</p><ul><li><b>uložený_kód</b><br />je buď jméno souboru ke vložení, nebo<br />ID záznamu v databázi Jumi komponenty.<br />Cesta k souboru je relativní vzhledem k Přednastavené Absolutní cestě, která může být definována v parametrech pluginu. Pokud není definována pluginem, je rovna kořenovému adresáři Joomla!.<br />ID záznamu musí předcházet hvěydička (např. *4).</li><li><b>[arg1] ... [argN]</b><br />jsou volitelné Jumi argumenty. Záleží na vašem uloženém kódu, zda je umí zpracovat. Argumenty jsou z vloženého php kódu pomocí pole $jumi[].</li></ul><p>Příklad vložení souboru + argumenty:  {jumi [plugin/content/jumi/jumi_demo.php][first][second]}</p><p>Příklad vložení z databáze:  {jumi [*1]}</p><p>K dispozici je též kompatibilní Jumi komponenta a modul.</p><p>Další informace a zdroje: <a href="http://jumi.vedeme.cz">Stahování a manuály</a>, <a href="http://edo.webmaster.am/jumi">Tipy & triky</a>.</p>
+JUMIPLUGINDESC=<p>This content plugin includes into Joomla! articles custom script: from a file or from Jumi component database record.</p><p><b>Usage: <jumi stored_code_source>code_written</jumi></b><br />where</p><ul><li><b>stored_code_source</b><br />is a filepathname to be included or<br />ID of Jumi componet databese table record.<br />The filepathname is a relative one with respect to Default Absolute Path that can be set in the plugin parameters. If not set then is equivalent to Joomla! root.<br />The record ID must be preceeded by an asterrisk (e.g. *1).</li><li><b>code_written</b><br />can be written html,php, javascript, css code. Use Jumi coder (editor button) for code inclusion into the article!!!</li></ul><p>You can omit either stored_code_source or code_written if you like. Code_written is processed first.</p><p>Example 1: <jumi plugin/content/jumi/jumi_demo.php></jumi></p><p>Example 2: <jumi *1></jumi></p><p>Example 3: <jumi *1><?php echo 'Hello O\'Harra!'; ?></jumi></p><p>Example 4: <jumi><?php echo 'Hello O\'Harra!'; ?></jumi></p><p><b>Security</b>: You can set filter tag jumi to <a href="http://docs.joomla.org/Screen.content.15#Filtering_Options_.28HTML.29">Blacklist defined user groups</a>.</p><p>Additional information and resources: <a href="http://jumi.vedeme.cz">Downloads & guides</a>, <a href="http://edo.webmaster.am/jumi">Tips & tricks</a>.</p>
 PARAMABSPATH=Volitelná Přednastavená Absolutní cesta pro vkládání souborů. Slouží jako automatická předpona k zadané cestě. Nedělejte žádné sleše na konci.Necháte-li toto prázdné, je identická s kořenovým adresářem Joomla!.
-PARAMCLEARJUMI=If set to Yes all Jumi codes {jumi}{/jumi} are cleared from all articles and are not processed.
+PARAMCLEARJUMI=If set to Yes all Jumi codes <jumi></jumi> are cleared from all articles and are not processed.
 PARAMNESTED=Je-li nastaveno na Yes pak Jumi vloží kód a nalezne-li v něm Jumi příkazovou syntaxi, vykoná jí také.
-PARAMDEBUGMODE=If set to No then Jumi does not show error messages. It clears Jumi code {jumi}{/jumi} in question from the article instead.
+PARAMDEBUGMODE=If set to No then Jumi does not show error messages. It clears Jumi code <jumi></jumi> in question from the article instead.
 ERROR_CONTENT=Jumi funguje, ale není nic, <b>co by šlo ukázat</b>.<br />Specifikujte zdroj kódu (prní hranatá závorka).
 ERROR_FILE=Soubor<br /><b>%s</b><br />neexistuje, nebo jej není možné přečíst!
 ERROR_RECORD=Záznam ID:<b>%d</b> neexistuje!
