@@ -1,11 +1,11 @@
 # $Id$
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
-JUMIPLUGINDESC=<p>Այս տեղակայքի փլագինը ներբեռնում է սցենարներ Joomla! հոդվաշներում:</p><p><b>Օգտագործում. {jumi [stored_code_source] [arg1] [arg2] ... [argN]}</b><br />որտեղ</p><ul><li><b>stored_code_source</b><br />դա ներբեռնվող ֆայլի արահետն է կամ<br />Jumi հավելվածի համարը պահոցում.<br />Ֆայլի արահետը հարաբերական է համր բացարձակ արահետին, որը կարող է նշվել փլագինի պարամետրերում: Եթե նշված չէ, ապա համարժեք է Joomla!-ի արմատային պահոցին:<br />Գրառման համարը պետք է կատարվի աստղանիշի օգնությամբ (օրինակ *4).</li><li><b>[arg1] ... [argN]</b><br />դրանք ոչ պարտադիր արգումենտներ են: Դրանք կաշխատեն, եթե ձեր սցենարը կարող է նրանցից օգտվել: Արգումենտները կարող են կարդացվել $jumi[] մասիվի միջոցով ներբեռնոած ֆայլից:</li></ul><p>Պարամետրերով ներբեռնման օրինակ: {jumi [plugin/content/jumi/jumi_demo.php][first][second]}</p><p>Հավելվածի ներբեռնման օրինակ:  {jumi [*1]}</p><p>Կան նաև համատեղ մոդուլ և քոմփոնենթ:</p><p>Հավելյալ տեղեկություններ. <a href="http://jumi.vedeme.cz">Downloads & guides</a>, <a href="http://edo.webmaster.am/jumi">Tips & tricks</a>.</p>
+JUMIPLUGINDESC=<p>This content plugin includes into Joomla! articles custom script: from a file or from Jumi component database record.</p><p><b>Usage: <jumi stored_code_source>code_written</jumi></b><br />where</p><ul><li><b>stored_code_source</b><br />is a filepathname to be included or<br />ID of Jumi componet databese table record.<br />The filepathname is a relative one with respect to Default Absolute Path that can be set in the plugin parameters. If not set then is equivalent to Joomla! root.<br />The record ID must be preceeded by an asterrisk (e.g. *1).</li><li><b>code_written</b><br />can be written html,php, javascript, css code. Use Jumi coder (editor button) for code inclusion into the article!!!</li></ul><p>You can omit either stored_code_source or code_written if you like. Code_written is processed first.</p><p>Example 1: <jumi plugin/content/jumi/jumi_demo.php></jumi></p><p>Example 2: <jumi *1></jumi></p><p>Example 3: <jumi *1><?php echo 'Hello O\'Harra!'; ?></jumi></p><p>Example 4: <jumi><?php echo 'Hello O\'Harra!'; ?></jumi></p><p><b>Security</b>: You can set filter tag jumi to <a href="http://docs.joomla.org/Screen.content.15#Filtering_Options_.28HTML.29">Blacklist defined user groups</a>.</p><p>Additional information and resources: <a href="http://jumi.vedeme.cz">Downloads & guides</a>, <a href="http://edo.webmaster.am/jumi">Tips & tricks</a>.</p>
 PARAMABSPATH=Ոչ անհրաժեշտ Jumi-ի համր բացարձակ արահետը ֆայլը ներբեռնելու համար: Այն ավելացվում է ներբեռնվող ֆայլի արահետի սկզբում: Եթե նշված չէ, ապա համարժեք է Joomla!-ի արմատային պահոցին: Օգտագործեք առանց վերջում թեք նշանի:
 PARAMCLEARJUMI=Եթե ընտրված է Այո, ապա Jumi սցենարը չի ցուցադրվում և չի կատարվում:
 PARAMNESTED=Եթե ընտրված է Այո, ապա Jumi-ն սցենարը ներբեռնելուց բացի կկատարի նաև ներբեռնված սցենարում ընդգրկված Jumi հրամանները:
-PARAMDEBUGMODE=If set to No then Jumi does not show error messages. It clears Jumi code {jumi}{/jumi} in question from the article instead.
+PARAMDEBUGMODE=If set to No then Jumi does not show error messages. It clears Jumi code <jumi></jumi> in question from the article instead.
 ERROR_CONTENT=Jumi-ն աշխատում է, բայց <b>չկա ոչինչ ցուցադրելու համար</b>:<br />Նշեք սցենարի ակունքը առաջին քառակուսի փակագծերում:
 ERROR_FILE=<b>%s</b> ֆայլը գոյություն չունի կամ չի կարող կարդացվել!
 ERROR_RECORD=Գրառում ID:<b>%d</b>-ը գոյություն չունի!
